# TCPclient

./: CMakeLists.txt  Iconnection.h  README.md  cURLwrapper.h.autosave  clientimpl.cpp  clientimpl.h  curlconnection.cpp  curlconnection.h  curlconnection.h.autosave  iconnection.h  main.cpp  tcpclient.cpp  tcpclient.h  tcpclient.h.autosave  tcpconnection.cpp  tcpconnection.h  tcpconnectionssl.cpp  tcpconnectionssl.h
